--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "client": "npm start -prefix client",
     "watch": "npm run server & npm run client",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "deploy": "npm run build --prefix client && npm start --prefix server",
     "test": "npm run test --prefix server && npm run test --prefix client "
   },
   "repository": {
@@ -27,5 +28,8 @@
   "devDependencies": {
     "concurrently": "^8.0.1",
     "nodemon": "^2.0.22"
+  },
+  "dependencies": {
+    "morgan": "^1.10.0"
   }
 }
