--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,8 @@
     "cors": "^2.8.5",
     "csv-parse": "^5.4.0",
     "express": "^4.18.2",
+    "mongodb": "^5.6.0",
+    "mongoose": "^7.2.2",
     "morgan": "^1.10.0",
     "pm2": "^5.3.0"
   },
