--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "nodemon": "^2.0.22"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "mongodb": "^5.6.0",
     "morgan": "^1.10.0"
   }
